--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="nav-links">
             <!-- <li><a href="#">Product Designer Portifolio</a></li> -->
-            <li> <a href="resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a> </li>
+            <li> <a href="https://ngonitasa.xyz/" target="_blank" rel="noopener noreferrer">Resume</a> </li>
             <li><a href="#">About</a></li>
             <li> <a href="contact.html">Contact</a></li>
         </ul>
