--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     
     <nav>
         <div class="logo">
-            <a href="design.html"><img src="logo.png" alt="" style="width: 30%;"></a> 
+            <a href="https://ngonitasa.xyz/"><img src="logo.png" alt="" style="width: 30%;"></a> 
         </div>
         <ul class="nav-links">
             <!-- <li><a href="#">Product Designer Portifolio</a></li> -->
