--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section class="gallery1">
         <div class="row6">
             <div class="column6">
-                <a target="_blank" href="https://taxxly.com"><img src="t1.png"
+                <a target="_blank" href="https://taxxly.xyz"><img src="t1.png"
                         class="img-thumbnail grow"></a>
             </div>
             <div class="column6">
